--- a/configuration/config.yml
+++ b/configuration/config.yml
@@ -2,9 +2,19 @@ imports:
     - resource: '../vendor/ql/mcp-panthor/configuration/panthor-slim.yml'
     - resource: '../vendor/ql/mcp-panthor/configuration/panthor.yml'
     - resource: 'di.yml'
+    - resource: 'di/services.yml'
+    - resource: 'ui/controllers.yml'
+    - resource: 'ui/middleware.yml'
+    - resource: 'api/controllers.yml'
+    - resource: 'api/middleware.yml'
+    - resource: 'api/services.yml'
     - resource: 'config.global.yml'
     - resource: 'config.env.yml'
-    - resource: 'routes.yml'
+    # - resource: routes/routes.admin.yml
+    - resource: routes/routes.api.yml
+    # - resource: routes/routes.api.crud.yml
+    # - resource: routes/routes.application.yml
+    - resource: routes/routes.yml
 
 parameters:
     # environment independent parameters
@@ -24,3 +34,24 @@ parameters:
         - 'slim.global_middleware.flash'
         - 'slim.global_middleware.session'
         - 'slim.global_middleware.user_session'
+
+
+    # Route condition regexes
+
+    # use these
+    r.alphanum: '[A-Za-z0-9]+'
+    r.digit: '[0-9]+'
+    r.guid: '[0-9a-zA-Z]{32,32}'
+    r.build: '[A-Za-z0-9\_\-\.]+'
+    r.release: '%r.build%'
+    r.date: '[0-9]{4}-[0-9]{2}-[0-9]{2}'
+
+    # not these (deprecated)
+    routes.regex.alphanum: '%r.alphanum%'
+    routes.regex.digit: '%r.digit%'
+    routes.regex.guid: '%r.guid%'
+
+    routes.regex.buildId: '%r.build%'
+    routes.regex.pushId: '%r.release%'
+
+    routes.regex.date: '%r.date%'
