--- a/configuration/api/services.yml
+++ b/configuration/api/services.yml
@@ -15,3 +15,68 @@ services:
 
     api.normalizer:
         class: 'Hal\UI\API\Normalizer'
+        calls:
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Application', '@api_normalizer.application']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Build', '@api_normalizer.build']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Deployment', '@api_normalizer.deployment']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Environment', '@api_normalizer.environment']]
+            # - ['addNormalizer', ['QL\Hal\Core\Entity\EventLog', '@api_normalizer.log.event']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Group', '@api_normalizer.group']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Push', '@api_normalizer.push']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\Server', '@api_normalizer.server']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\User', '@api_normalizer.user']]
+            # - ['addNormalizer', ['QL\MCP\Common\Time\TimePoint', '@api_normalizer.timepoint']]
+            - ['addNormalizer', ['Hal\UI\Api\Hyperlink', '@api_normalizer.hyperlink']]
+
+    ####################################################################################################################
+    # API Entity Normalizers
+    ####################################################################################################################
+
+    api_normalizer.build:
+        class: 'Hal\UI\API\Normalizer\BuildNormalizer'
+        arguments:
+            - '@github.url_builder'
+            - '@api_normalizer.user'
+            - '@api_normalizer.application'
+            - '@api_normalizer.environment'
+
+    api_normalizer.deployment:
+        class: 'Hal\UI\API\Normalizer\DeploymentNormalizer'
+        arguments: ['@api_normalizer.application', '@api_normalizer.server']
+
+    api_normalizer.environment:
+        class: 'Hal\UI\API\Normalizer\EnvironmentNormalizer'
+
+    # api_normalizer.log.event:
+    #     class: 'Hal\UI\API\Normalizer\EventLogNormalizer'
+    #     arguments: ['@api_normalizer.build', '@api_normalizer.push']
+
+    api_normalizer.group:
+        class: 'Hal\UI\API\Normalizer\GroupNormalizer'
+
+    api_normalizer.push:
+        class: 'Hal\UI\API\Normalizer\PushNormalizer'
+        arguments:
+            - '@api_normalizer.user'
+            - '@api_normalizer.build'
+            - '@api_normalizer.deployment'
+            - '@api_normalizer.application'
+
+    api_normalizer.application:
+        class: 'Hal\UI\API\Normalizer\ApplicationNormalizer'
+        arguments: ['@github.url_builder', '@api_normalizer.group']
+
+    api_normalizer.server:
+        class: 'Hal\UI\API\Normalizer\ServerNormalizer'
+        arguments: ['@api_normalizer.environment']
+
+    # api_normalizer.timepoint:
+    #     class: 'Hal\UI\API\Normalizer\TimePointNormalizer'
+
+    api_normalizer.user:
+        class: 'Hal\UI\API\Normalizer\UserNormalizer'
+        arguments: ['@permissions']
+
+    api_normalizer.hyperlink:
+        class: 'Hal\UI\API\Normalizer\HyperlinkNormalizer'
+        arguments: ['@uri']
