--- a/configuration/config.yml
+++ b/configuration/config.yml
@@ -46,6 +46,8 @@ parameters:
     r.release: '%r.build%'
     r.date: '[0-9]{4}-[0-9]{2}-[0-9]{2}'
 
+    r.api.queue: '[A-Za-z0-9\+\-\.]+'
+
     # not these (deprecated)
     routes.regex.alphanum: '%r.alphanum%'
     routes.regex.digit: '%r.digit%'
