--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -67,7 +67,7 @@ parameters:
 
         server:
             method: 'GET'
-            route: '/servers/{server:%routes.regex.digit%}'
+            route: '/servers/{server:%r.digit%}'
             stack: ['middleware.signed_in', 'middleware.require_entity', 'server.page']
 
         server.add:
@@ -77,17 +77,17 @@ parameters:
 
         server.edit:
             method: ['GET', 'POST']
-            route: '/servers/{server:%routes.regex.digit%}/edit'
+            route: '/servers/{server:%r.digit%}/edit'
             stack: ['middleware.is_admin', 'middleware.require_entity', 'server.edit.page']
 
         server.remove.confirm:
             method: 'GET'
-            route: '/servers/{server:%routes.regex.digit%}/remove'
+            route: '/servers/{server:%r.digit%}/remove'
             stack: ['middleware.is_admin', 'middleware.require_entity', 'delete.confirm.page']
 
         server.remove:
             method: 'POST'
-            route: '/servers/{server:%routes.regex.digit%}/remove'
+            route: '/servers/{server:%r.digit%}/remove'
             stack: ['middleware.is_admin', 'middleware.require_entity', 'server.remove.page']
 
         servers:
@@ -138,7 +138,6 @@ parameters:
         deployment: {route: '/derp33', stack: []}
 
         api.environments: {route: '/derp14', stack: []}
-        api.servers: {route: '/derp15', stack: []}
         api.applications: {route: '/derp16', stack: []}
         api.groups: {route: '/derp17', stack: []}
         api.users: {route: '/derp18', stack: []}
